@@ -101,6 +101,10 @@ search.keepDialog.toggle=true
 # When this limit is reached a dialog appears to cancel the search
 hypersearch.maxWarningResults=1000
 
+# If the hypersearch query is longer than this value it will be truncated
+# on display in the results
+hypersearch.displayQueryLength=100
+
 # Style for highlighting matches in hypersearch results
 hypersearch.results.highlight=bgColor:#ccccff
 
